--- a/index.html
+++ b/index.html
@@ -2,11 +2,266 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/javascript.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ZERO — Minimalist Clothing</title>
   <script src="https://unpkg.com/lucide@latest"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --bg-color: #ffffff;
+      --text-color: #0c0c0c;
+      --accent-color: #000000;
+      --card-bg: #f8f8f8;
+      --nav-bg: rgba(255, 255, 255, 0.8);
+      --border-color: #e0e0e0;
+      --transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+      --font-main: 'Outfit', sans-serif;
+    }
+
+    [data-theme='dark'] {
+      --bg-color: #0a0a0a;
+      --text-color: #f5f5f5;
+      --accent-color: #ffffff;
+      --card-bg: #111111;
+      --nav-bg: rgba(10, 10, 10, 0.8);
+      --border-color: #222222;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: var(--font-main);
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      transition: background-color 0.5s ease, color 0.5s ease;
+      overflow-x: hidden;
+      line-height: 1.6;
+    }
+
+    /* Navbar */
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      padding: 1.5rem 5%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: var(--nav-bg);
+      backdrop-filter: blur(15px);
+      z-index: 1000;
+      border-bottom: 1px solid var(--border-color);
+    }
+
+    .logo {
+      font-size: 1.8rem;
+      font-weight: 800;
+      letter-spacing: -1px;
+      text-transform: uppercase;
+      cursor: pointer;
+    }
+
+    .nav-actions {
+      display: flex;
+      gap: 1.2rem;
+      align-items: center;
+    }
+
+    .icon-btn {
+      background: none;
+      border: none;
+      color: var(--text-color);
+      cursor: pointer;
+      padding: 8px;
+      border-radius: 50%;
+      transition: var(--transition);
+      display: flex;
+      align-items: center;
+      position: relative;
+    }
+
+    .icon-btn:hover {
+      background: var(--card-bg);
+      transform: translateY(-2px);
+    }
+
+    /* Hero Section */
+    .hero {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 0 5%;
+      text-align: center;
+    }
+
+    .hero h1 {
+      font-size: clamp(5rem, 18vw, 12rem);
+      font-weight: 800;
+      line-height: 0.8;
+      letter-spacing: -0.05em;
+      margin-bottom: 2rem;
+    }
+
+    .hero p {
+      font-size: 1.1rem;
+      max-width: 500px;
+      opacity: 0.6;
+      margin-bottom: 3rem;
+      font-weight: 300;
+    }
+
+    .cta-group {
+      display: flex;
+      gap: 1.5rem;
+    }
+
+    .btn {
+      padding: 1rem 2.5rem;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 0.9rem;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      transition: var(--transition);
+      border: 1px solid var(--accent-color);
+    }
+
+    .btn-primary {
+      background: var(--accent-color);
+      color: var(--bg-color);
+    }
+
+    .btn-primary:hover {
+      background: transparent;
+      color: var(--accent-color);
+    }
+
+    /* Products Placeholder */
+    .products-section {
+      padding: 8rem 5%;
+      border-top: 1px solid var(--border-color);
+    }
+
+    .section-tag {
+      font-size: 0.8rem;
+      letter-spacing: 5px;
+      text-transform: uppercase;
+      opacity: 0.4;
+      margin-bottom: 4rem;
+      display: block;
+      text-align: center;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+      gap: 2rem;
+    }
+
+    .product-card {
+      aspect-ratio: 3/4;
+      background: var(--card-bg);
+      border: 1px solid var(--border-color);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      transition: var(--transition);
+      padding: 2rem;
+    }
+
+    .product-card:hover {
+      border-color: var(--text-color);
+    }
+
+    .product-card span {
+      font-size: 0.9rem;
+      opacity: 0.3;
+      letter-spacing: 2px;
+    }
+
+    /* Sidebar Styles */
+    .sidebar {
+      position: fixed;
+      right: -100%;
+      top: 0;
+      width: 450px;
+      height: 100vh;
+      background: var(--bg-color);
+      z-index: 2000;
+      transition: 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+      padding: 3rem;
+      border-left: 1px solid var(--border-color);
+      box-shadow: -20px 0 50px rgba(0, 0, 0, 0.05);
+    }
+
+    .sidebar.active {
+      right: 0;
+    }
+
+    .sidebar-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 4rem;
+    }
+
+    .close-btn {
+      cursor: pointer;
+      opacity: 0.5;
+      transition: 0.3s;
+    }
+
+    .close-btn:hover {
+      opacity: 1;
+    }
+
+    .cart-count {
+      position: absolute;
+      top: 0;
+      right: 0;
+      background: #ff3e3e;
+      color: white;
+      font-size: 0.65rem;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 800;
+    }
+
+    [data-theme='dark'] .sun {
+      display: block;
+    }
+
+    [data-theme='dark'] .moon {
+      display: none;
+    }
+
+    .sun {
+      display: none;
+    }
+
+    @media (max-width: 600px) {
+      .sidebar {
+        width: 100%;
+      }
+
+      .hero h1 {
+        font-size: 4rem;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -14,85 +269,122 @@
     <nav>
       <div class="logo">Zero</div>
       <div class="nav-actions">
-        <button id="theme-toggle" class="icon-btn" title="Toggle Theme">
+        <button id="theme-toggle" class="icon-btn">
           <i data-lucide="moon" class="moon"></i>
           <i data-lucide="sun" class="sun"></i>
         </button>
-        <div class="cart-icon-wrapper">
-          <button id="cart-btn" class="icon-btn" title="Shopping Cart">
+        <div style="position: relative;">
+          <button id="cart-btn" class="icon-btn">
             <i data-lucide="shopping-bag"></i>
+            <span class="cart-count">0</span>
           </button>
-          <span class="cart-count">0</span>
         </div>
-        <button id="login-btn" class="icon-btn" title="Login with Google">
+        <button id="login-btn" class="icon-btn">
           <i data-lucide="user"></i>
         </button>
       </div>
     </nav>
 
     <main class="hero">
-      <h1>ZERO</h1>
-      <p>Essential pieces, zero distractions. Designed for those who value the purity of form and the luxury of
-        simplicity.</p>
-      <div class="cta-group">
+      <h1 id="hero-title">ZERO</h1>
+      <p id="hero-desc">Essential pieces, zero distractions. Designed for those who value the purity of form and the
+        luxury of simplicity.</p>
+      <div class="cta-group" id="hero-cta">
         <a href="#" class="btn btn-primary">Discover More</a>
-        <a href="#" class="btn btn-secondary">Coming Soon</a>
+        <a href="#" class="btn" style="opacity: 0.5;">Coming Soon</a>
       </div>
     </main>
 
-    <section class="products-placeholder" style="padding: 4rem 5%; text-align: center;">
-      <h2 style="font-size: 1.5rem; opacity: 0.3; letter-spacing: 5px; text-transform: uppercase;">Collection Zero // 00
-      </h2>
-      <div
-        style="margin-top: 4rem; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
-        <div
-          style="height: 400px; background: var(--card-bg); border: 1px solid var(--border-color); display: flex; align-items: center; justify-content: center; opacity: 0.5;">
-          <span>[ Item 01 ]</span>
-        </div>
-        <div
-          style="height: 400px; background: var(--card-bg); border: 1px solid var(--border-color); display: flex; align-items: center; justify-content: center; opacity: 0.5;">
-          <span>[ Item 02 ]</span>
-        </div>
-        <div
-          style="height: 400px; background: var(--card-bg); border: 1px solid var(--border-color); display: flex; align-items: center; justify-content: center; opacity: 0.5;">
-          <span>[ Item 03 ]</span>
-        </div>
+    <section class="products-section">
+      <span class="section-tag">Collection // Zero 00</span>
+      <div class="grid">
+        <div class="product-card"><span>[ Item_01 ]</span></div>
+        <div class="product-card"><span>[ Item_02 ]</span></div>
+        <div class="product-card"><span>[ Item_03 ]</span></div>
       </div>
     </section>
 
-    <!-- Cart Sidebar -->
+    <!-- Sidebars -->
     <div id="cart-sidebar" class="sidebar">
       <div class="sidebar-header">
         <h2>Your Bag</h2>
         <i data-lucide="x" class="close-btn" id="close-cart"></i>
       </div>
-      <div id="cart-items">
-        <p style="text-align: center; margin-top: 50px; opacity: 0.5;">Your bag is currently empty.</p>
-      </div>
+      <p style="opacity: 0.4; text-align: center; margin-top: 50%;">Your bag is empty.</p>
     </div>
 
-    <!-- Profile/Login Sidebar -->
     <div id="profile-sidebar" class="sidebar">
       <div class="sidebar-header">
         <h2>Account</h2>
         <i data-lucide="x" class="close-btn" id="close-profile"></i>
       </div>
-      <div id="auth-content">
-        <p style="margin-bottom: 2rem; opacity: 0.7;">Sign in to save your preferences and view orders.</p>
-        <button id="google-signin" class="btn btn-primary"
-          style="width: 100%; display: flex; align-items: center; justify-content: center; gap: 10px;">
-          <i data-lucide="chrome"></i> Continue with Google
-        </button>
-      </div>
-      <div id="user-info" style="display: none;">
-        <p id="user-name"></p>
-        <button id="logout-btn" class="btn" style="margin-top: 2rem; width: 100%;">Sign Out</button>
-      </div>
+      <button id="google-login" class="btn btn-primary"
+        style="width: 100%; display: flex; align-items: center; justify-content: center; gap: 10px;">
+        <i data-lucide="log-in" style="width: 18px;"></i> Continue with Google
+      </button>
     </div>
   </div>
-  <script type="module" src="/src/main.js"></script>
+
   <script>
+    // Initialize Icons
     lucide.createIcons();
+
+    // Theme Toggle
+    const themeToggle = document.getElementById('theme-toggle');
+    const body = document.body;
+    const savedTheme = localStorage.getItem('theme') || 'dark';
+    body.setAttribute('data-theme', savedTheme);
+
+    themeToggle.addEventListener('click', () => {
+      const current = body.getAttribute('data-theme');
+      const next = current === 'light' ? 'dark' : 'light';
+      body.setAttribute('data-theme', next);
+      localStorage.setItem('theme', next);
+
+      // Subtle transition
+      gsap.fromTo('body', { opacity: 0.9 }, { opacity: 1, duration: 0.4 });
+    });
+
+    // Sidebar Logic
+    const setupSidebar = (btnId, sidebarId, closeId) => {
+      const btn = document.getElementById(btnId);
+      const sidebar = document.getElementById(sidebarId);
+      const close = document.getElementById(closeId);
+
+      btn.addEventListener('click', () => sidebar.classList.add('active'));
+      close.addEventListener('click', () => sidebar.classList.remove('active'));
+    };
+
+    setupSidebar('cart-btn', 'cart-sidebar', 'close-cart');
+    setupSidebar('login-btn', 'profile-sidebar', 'close-profile');
+
+    // Hero Animations
+    gsap.from("#hero-title", {
+      y: 100,
+      opacity: 0,
+      duration: 1.5,
+      ease: "expo.out",
+      delay: 0.2
+    });
+    gsap.from("#hero-desc", {
+      y: 30,
+      opacity: 0,
+      duration: 1.2,
+      ease: "power3.out",
+      delay: 0.8
+    });
+    gsap.from("#hero-cta", {
+      y: 20,
+      opacity: 0,
+      duration: 1,
+      ease: "power3.out",
+      delay: 1.1
+    });
+
+    // Google Login Placeholder
+    document.getElementById('google-login').addEventListener('click', () => {
+      alert("Google Login requires Firebase configuration. Check src/main.js for setup instructions.");
+    });
   </script>
 </body>
 
