--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@
     // REPLACE THIS WITH YOUR CONFIG FROM FIREBASE CONSOLE
     const firebaseConfig = {
       apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
+      authDomain: "m989-.firebaseapp.com",
+      projectId: "m989-",
+      storageBucket: "m989-.appspot.com",
       messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
       appId: "YOUR_APP_ID"
     };
